# SPDX-License-Identifier: Apache-2.0

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_elab_and_lint_test_suite", "br_verilog_synth_suite")

package(default_visibility = ["//visibility:public"])

verilog_library(
    name = "br_amba_pkg",
    srcs = ["br_amba_pkg.sv"],
)

verilog_library(
    name = "br_amba_axil2apb",
    srcs = ["br_amba_axil2apb.sv"],
    deps = [
        ":br_amba_pkg",
        "//arb/rtl:br_arb_rr",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
    ],
)

verilog_library(
    name = "br_amba_axi_timing_slice",
    srcs = ["br_amba_axi_timing_slice.sv"],
    deps = [
        ":br_amba_pkg",
        "//flow/rtl:br_flow_reg_both",
        "//flow/rtl:br_flow_reg_fwd",
        "//flow/rtl:br_flow_reg_rev",
        "//macros:br_asserts_internal",
    ],
)

verilog_library(
    name = "br_amba_axil_timing_slice",
    srcs = ["br_amba_axil_timing_slice.sv"],
    deps = [
        ":br_amba_pkg",
        "//flow/rtl:br_flow_reg_both",
    ],
)

verilog_library(
    name = "br_amba_axi_default_target",
    srcs = ["br_amba_axi_default_target.sv"],
    deps = [
        ":br_amba_pkg",
        "//counter/rtl:br_counter_incr",
        "//flow/rtl:br_flow_reg_fwd",
        "//macros:br_asserts_internal",
        "//macros:br_unused",
    ],
)

verilog_library(
    name = "br_amba_axil_default_target",
    srcs = ["br_amba_axil_default_target.sv"],
    deps = [
        ":br_amba_axi_default_target",
        ":br_amba_pkg",
    ],
)

verilog_library(
    name = "br_amba_axil_split",
    srcs = ["br_amba_axil_split.sv"],
    deps = [
        ":br_amba_pkg",
        "//arb/rtl:br_arb_rr",
        "//counter/rtl:br_counter",
        "//flow/rtl:br_flow_reg_both",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
    ],
)

verilog_library(
    name = "br_amba_atb_funnel",
    srcs = ["br_amba_atb_funnel.sv"],
    deps = [
        ":br_amba_pkg",
        "//flow/rtl:br_flow_mux_rr_stable",
        "//macros:br_asserts_internal",
    ],
)

verilog_library(
    name = "br_amba_axil_msi",
    srcs = ["br_amba_axil_msi.sv"],
    deps = [
        ":br_amba_pkg",
        "//counter/rtl:br_counter_decr",
        "//flow/rtl:br_flow_mux_rr_stable",
        "//flow/rtl:br_flow_reg_both",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
    ],
)

verilog_library(
    name = "br_amba_axi2axil",
    srcs = ["br_amba_axi2axil.sv"],
    deps = [
        ":br_amba_pkg",
        "//amba/rtl/internal:br_amba_axi2axil_core",
        "//macros:br_asserts_internal",
    ],
)

verilog_library(
    name = "br_amba_apb_timing_slice",
    srcs = ["br_amba_apb_timing_slice.sv"],
    deps = [
        ":br_amba_pkg",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
    ],
)

verilog_library(
    name = "br_apb_demux_select_onehot",
    srcs = ["br_apb_demux_select_onehot.sv"],
    deps = [
        ":br_amba_apb_timing_slice",
        ":br_amba_pkg",
        "//macros:br_asserts_internal",
        "//macros:br_unused",
        "//mux/rtl:br_mux_onehot",
    ],
)

verilog_library(
    name = "br_apb_demux",
    srcs = ["br_apb_demux.sv"],
    deps = [
        ":br_amba_pkg",
        ":br_apb_demux_select_onehot",
        "//demux/rtl:br_demux_addr_decode",
        "//macros:br_asserts_internal",
        "//macros:br_unused",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axil2apb_test_suite",
    params = {
        "AddrWidth": [
            "32",
            "40",
        ],
        "DataWidth": [
            "32",
            "64",
        ],
    },
    deps = [":br_amba_axil2apb"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_timing_slice_test_suite",
    params = {
        "AddrWidth": [
            "12",
            "32",
            "40",
        ],
        "DataWidth": [
            "32",
            "64",
            "128",
        ],
    },
    deps = [":br_amba_axi_timing_slice"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_timing_slice_fwd_test_suite",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["32"],
        "AWSliceType": ["0"],
        "WSliceType": ["0"],
        "ARSliceType": ["0"],
        "RSliceType": ["0"],
        "BSliceType": ["0"],
    },
    deps = [":br_amba_axi_timing_slice"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_timing_slice_rev_test_suite",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["32"],
        "AWSliceType": ["1"],
        "WSliceType": ["1"],
        "ARSliceType": ["1"],
        "RSliceType": ["1"],
        "BSliceType": ["1"],
    },
    deps = [":br_amba_axi_timing_slice"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_timing_slice_full_test_suite",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["32"],
        "AWSliceType": ["2"],
        "WSliceType": ["2"],
        "ARSliceType": ["2"],
        "RSliceType": ["2"],
        "BSliceType": ["2"],
    },
    deps = [":br_amba_axi_timing_slice"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axil_timing_slice_test_suite",
    params = {
        "AddrWidth": [
            "32",
            "40",
        ],
        "DataWidth": [
            "32",
            "64",
        ],
    },
    deps = [":br_amba_axil_timing_slice"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_default_target_test_suite",
    params = {
        "DataWidth": [
            "32",
            "64",
        ],
        "DecodeError": [
            "0",
            "1",
        ],
        "SingleBeat": [
            "0",
            "1",
        ],
        "AxiIdWidth": [
            "1",
            "8",
        ],
    },
    deps = [":br_amba_axi_default_target"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axil_default_target_test_suite",
    params = {
        "DataWidth": [
            "32",
            "64",
        ],
        "DecodeError": [
            "0",
            "1",
        ],
    },
    deps = [":br_amba_axil_default_target"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axil_split_test_suite",
    params = {
        "AddrWidth": [
            "32",
            "40",
        ],
        "DataWidth": [
            "32",
            "64",
        ],
        "MaxOutstandingReads": [
            "4",
            "16",
        ],
        "MaxOutstandingWrites": [
            "4",
            "16",
        ],
        "NumBranchAddrRanges": [
            "1",
            "2",
        ],
    },
    deps = [":br_amba_axil_split"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_atb_funnel_test_suite",
    params = {
        "NumSources": [
            "2",
            "4",
        ],
        "DataWidth": [
            "32",
            "64",
        ],
        "UserWidth": [
            "1",
            "8",
        ],
    },
    deps = [":br_amba_atb_funnel"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axil_msi_test_suite",
    params = {
        "DataWidth": [
            "32",
            "64",
        ],
        "NumInterrupts": [
            "2",
            "8",
        ],
        "NumMsiDestAddr": [
            "1",
            "2",
        ],
        "ThrottleCntrWidth": [
            "2",
            "4",
        ],
    },
    deps = [":br_amba_axil_msi"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi2axil_test_suite",
    params = {
        "AddrWidth": [
            "32",
            "40",
        ],
        "DataWidth": [
            "32",
            "64",
        ],
    },
    deps = [":br_amba_axi2axil"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_apb_timing_slice_test_suite",
    params = {
        "AddrWidth": [
            "12",
            "32",
        ],
    },
    deps = [":br_amba_apb_timing_slice"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_apb_demux_select_onehot_test_suite",
    params = {
        "AddrWidth": [
            "12",
            "32",
        ],
        "EnableDecodeError": [
            "0",
            "1",
        ],
        "NumDownstreams": [
            "2",
            "3",
        ],
    },
    deps = [":br_apb_demux_select_onehot"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_apb_demux_select_onehot_test_suite_single_downstream",
    params = {
        "AddrWidth": [
            "12",
            "32",
        ],
        "EnableDecodeError": [
            "0",
            "1",
        ],
        "NumDownstreams": ["1"],
    },
    deps = [":br_apb_demux_select_onehot"],
)

br_verilog_synth_suite(
    name = "br_apb_demux_select_onehot_baseline_ppa",
    params = {
        "AddrWidth": ["16"],
        "EnableDecodeError": ["1"],
        "NumDownstreams": ["4"],
    },
    deps = [":br_apb_demux_select_onehot"],
)

br_verilog_synth_suite(
    name = "br_apb_demux_select_onehot_scaled_ppa",
    params = {
        "AddrWidth": ["32"],
        "EnableDecodeError": ["0"],
        "NumDownstreams": ["16"],
    },
    deps = [":br_apb_demux_select_onehot"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_apb_demux_test_suite",
    params = {
        "AddrWidth": [
            "12",
            "32",
        ],
        "HasDefaultDownstream": [
            "0",
            "1",
        ],
        "NumDownstreams": [
            "2",
            "3",
        ],
    },
    deps = [":br_apb_demux"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_apb_demux_test_suite_single_downstream",
    params = {
        "AddrWidth": [
            "12",
            "32",
        ],
        "HasDefaultDownstream": ["0"],
        "NumDownstreams": ["1"],
    },
    deps = [":br_apb_demux"],
)

br_verilog_synth_suite(
    name = "br_apb_demux_baseline_ppa",
    params = {
        "AddrWidth": ["16"],
        "HasDefaultDownstream": ["0"],
        "NumDownstreams": ["4"],
    },
    deps = [":br_apb_demux"],
)

br_verilog_synth_suite(
    name = "br_apb_demux_scaled_ppa",
    params = {
        "AddrWidth": ["32"],
        "HasDefaultDownstream": ["1"],
        "NumDownstreams": ["16"],
    },
    deps = [":br_apb_demux"],
)

verilog_library(
    name = "br_amba_axi_isolate_sub",
    srcs = ["br_amba_axi_isolate_sub.sv"],
    deps = [
        ":br_amba_pkg",
        "//amba/rtl/internal:br_amba_iso_ds_fsm",
        "//amba/rtl/internal:br_amba_iso_resp_tracker",
        "//amba/rtl/internal:br_amba_iso_wdata_align",
        "//flow/rtl:br_flow_reg_fwd",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
        "//macros:br_unused",
        "//pkg:br_math_pkg",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_isolate_sub_test_suite",
    params = {
        "AddrWidth": ["64"],
        "DataWidth": ["128"],
        "AwAxiIdWidth": ["3"],
        "AwAxiIdCount": [
            "1",
            "6",
        ],
        "ArAxiIdWidth": ["2"],
        "ArAxiIdCount": [
            "1",
            "3",
        ],
        "AwMaxOutstanding": ["128"],
        "ArMaxOutstanding": ["64"],
        "MaxAxiBurstLen": [
            "1",
            "256",
        ],
    },
    deps = [":br_amba_axi_isolate_sub"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_isolate_sub_axilite_test_suite",
    params = {
        "AddrWidth": ["40"],
        "DataWidth": ["64"],
        "AwAxiIdWidth": ["1"],
        "AwAxiIdCount": ["1"],
        "ArAxiIdWidth": ["1"],
        "ArAxiIdCount": ["1"],
        "AwMaxOutstanding": ["16"],
        "ArMaxOutstanding": ["16"],
        "MaxAxiBurstLen": ["1"],
    },
    deps = [":br_amba_axi_isolate_sub"],
)

verilog_library(
    name = "br_amba_axi_isolate_mgr",
    srcs = ["br_amba_axi_isolate_mgr.sv"],
    deps = [
        ":br_amba_pkg",
        "//amba/rtl/internal:br_amba_iso_req_tracker",
        "//amba/rtl/internal:br_amba_iso_us_fsm",
        "//amba/rtl/internal:br_amba_iso_wdata_align",
        "//flow/rtl:br_flow_reg_fwd",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
        "//pkg:br_math_pkg",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_isolate_mgr_test_suite",
    params = {
        "AddrWidth": ["64"],
        "DataWidth": ["128"],
        "IdWidth": ["8"],
        "MaxOutstanding": [
            "128",
            "2",
        ],
        "MaxAxiBurstLen": [
            "1",
            "256",
        ],
    },
    deps = [":br_amba_axi_isolate_mgr"],
)

verilog_library(
    name = "br_amba_axi_demux",
    srcs = ["br_amba_axi_demux.sv"],
    deps = [
        ":br_amba_pkg",
        "//amba/rtl/internal:br_amba_axi_demux_req_tracker",
        "//fifo/rtl:br_fifo_flops",
        "//flow/rtl:br_flow_demux_select_unstable",
        "//flow/rtl:br_flow_reg_fwd",
        "//flow/rtl/internal:br_flow_checks_valid_data_impl",
        "//macros:br_asserts_internal",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_demux_test_suite",
    params = {
        "SingleIdOnly": [
            "1",
            "0",
        ],
        "AwAxiIdWidth": [
            "1",
            "4",
        ],
        "ArAxiIdWidth": [
            "1",
            "4",
        ],
        "NumSubordinates": [
            "2",
            "3",
        ],
        "RegisterDownstreamAxOutputs": [
            "1",
            "0",
        ],
        "RegisterDownstreamWOutputs": [
            "1",
            "0",
        ],
    },
    deps = [":br_amba_axi_demux"],
)

verilog_library(
    name = "br_amba_axi_shrinker",
    srcs = ["br_amba_axi_shrinker.sv"],
    deps = [
        ":br_amba_pkg",
        "//amba/rtl/internal:br_amba_axi_resizer_beat_tracker",
        "//enc/rtl:br_enc_bin2onehot",
        "//fifo/rtl:br_fifo_flops",
        "//flow/rtl:br_flow_fork",
        "//flow/rtl:br_flow_join",
        "//flow/rtl:br_flow_reg_fwd",
        "//flow/rtl:br_flow_reg_none",
        "//macros:br_asserts_internal",
        "//macros:br_assign",
        "//macros:br_registers",
        "//mux/rtl:br_mux_bin",
        "//pkg:br_math_pkg",
        "//ram/rtl:br_ram_flops",
        "//shift/rtl:br_shift_left",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_shrinker_test_suite",
    params = {
        "AddrWidth": ["12"],
        "WideDataWidth": [
            "128",
            "64",
        ],
        "NarrowDataWidth": [
            "8",
            "16",
            "32",
        ],
        "IdWidth": ["5"],
        "MaxOutstandingReqs": [
            "1",
            "8",
        ],
        "WriteFifoDepth": [
            "1",
            "2",
        ],
        "RegisterNarrowOutputs": [
            "1",
            "0",
        ],
        "RegisterWideOutputs": [
            "1",
            "0",
        ],
    },
    deps = [":br_amba_axi_shrinker"],
)

br_verilog_synth_suite(
    name = "br_amba_apb_timing_slice_width_ppa",
    params = {
        "AddrWidth": [
            "32",
            "40",
        ],
    },
    deps = [":br_amba_apb_timing_slice"],
)

br_verilog_synth_suite(
    name = "br_amba_atb_funnel_baseline_ppa",
    params = {
        "DataWidth": ["32"],
        "NumSources": ["2"],
        "RegisterAtReady": ["0"],
        "UserWidth": ["1"],
    },
    deps = [":br_amba_atb_funnel"],
)

br_verilog_synth_suite(
    name = "br_amba_atb_funnel_scaled_ppa",
    params = {
        "DataWidth": ["64"],
        "NumSources": ["4"],
        "RegisterAtReady": ["1"],
        "UserWidth": ["8"],
    },
    deps = [":br_amba_atb_funnel"],
)

br_verilog_synth_suite(
    name = "br_amba_axi2axil_baseline_ppa",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["32"],
        "IdWidth": ["4"],
        "MaxOutstandingReqs": ["4"],
    },
    deps = [":br_amba_axi2axil"],
)

br_verilog_synth_suite(
    name = "br_amba_axi2axil_scaled_ppa",
    params = {
        "AddrWidth": ["40"],
        "DataWidth": ["64"],
        "IdWidth": ["8"],
        "MaxOutstandingReqs": ["16"],
    },
    deps = [":br_amba_axi2axil"],
)

br_verilog_synth_suite(
    name = "br_amba_axi_default_target_single_beat_ppa",
    params = {
        "AxiIdWidth": ["4"],
        "DataWidth": ["32"],
        "SingleBeat": ["1"],
    },
    deps = [":br_amba_axi_default_target"],
)

br_verilog_synth_suite(
    name = "br_amba_axi_default_target_burst_ppa",
    params = {
        "AxiIdWidth": ["8"],
        "DataWidth": ["64"],
        "SingleBeat": ["0"],
    },
    deps = [":br_amba_axi_default_target"],
)

br_verilog_synth_suite(
    name = "br_amba_axi_demux_single_id_ppa",
    params = {
        "AddrWidth": ["32"],
        "ArAxiIdWidth": ["1"],
        "ArMaxOutstandingPerId": ["4"],
        "AwAxiIdWidth": ["1"],
        "AwMaxOutstandingPerId": ["4"],
        "DataWidth": ["32"],
        "MaxAwRunahead": ["4"],
        "NumSubordinates": ["2"],
        "RegisterDownstreamAxOutputs": ["1"],
        "RegisterDownstreamWOutputs": ["1"],
        "SingleIdOnly": ["1"],
        "WdataBufferDepth": ["2"],
    },
    deps = [":br_amba_axi_demux"],
)

br_verilog_synth_suite(
    name = "br_amba_axi_demux_multi_id_ppa",
    params = {
        "AddrWidth": ["40"],
        "ArAxiIdWidth": ["4"],
        "ArMaxOutstandingPerId": ["8"],
        "AwAxiIdWidth": ["4"],
        "AwMaxOutstandingPerId": ["8"],
        "DataWidth": ["64"],
        "MaxAwRunahead": ["8"],
        "NumSubordinates": ["4"],
        "RegisterDownstreamAxOutputs": ["1"],
        "RegisterDownstreamWOutputs": ["1"],
        "SingleIdOnly": ["0"],
        "WdataBufferDepth": ["4"],
    },
    deps = [":br_amba_axi_demux"],
)

br_verilog_synth_suite(
    name = "br_amba_axi_isolate_mgr_single_beat_ppa",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["32"],
        "IdWidth": ["4"],
        "MaxAxiBurstLen": ["1"],
        "MaxOutstanding": ["16"],
    },
    deps = [":br_amba_axi_isolate_mgr"],
)

br_verilog_synth_suite(
    name = "br_amba_axi_isolate_mgr_burst_ppa",
    params = {
        "AddrWidth": ["40"],
        "DataWidth": ["64"],
        "IdWidth": ["8"],
        "MaxAxiBurstLen": ["256"],
        "MaxOutstanding": ["64"],
    },
    deps = [":br_amba_axi_isolate_mgr"],
)

br_verilog_synth_suite(
    name = "br_amba_axi_isolate_sub_static_single_beat_ppa",
    params = {
        "AddrWidth": ["32"],
        "ArAxiIdCount": ["1"],
        "ArAxiIdWidth": ["1"],
        "ArMaxOutstanding": ["16"],
        "AwAxiIdCount": ["1"],
        "AwAxiIdWidth": ["1"],
        "AwMaxOutstanding": ["16"],
        "DataWidth": ["32"],
        "MaxAxiBurstLen": ["1"],
        "StaticPerIdReadTrackerFifoDepth": ["16"],
        "UseDynamicFifoForReadTracker": ["0"],
    },
    deps = [":br_amba_axi_isolate_sub"],
)

br_verilog_synth_suite(
    name = "br_amba_axi_isolate_sub_dynamic_burst_ppa",
    params = {
        "AddrWidth": ["40"],
        "ArAxiIdCount": ["8"],
        "ArAxiIdWidth": ["4"],
        "ArMaxOutstanding": ["64"],
        "AwAxiIdCount": ["8"],
        "AwAxiIdWidth": ["4"],
        "AwMaxOutstanding": ["64"],
        "DataWidth": ["64"],
        "MaxAxiBurstLen": ["256"],
        "UseDynamicFifoForReadTracker": ["1"],
    },
    deps = [":br_amba_axi_isolate_sub"],
)

br_verilog_synth_suite(
    name = "br_amba_axi_shrinker_baseline_ppa",
    params = {
        "AddrWidth": ["32"],
        "IdWidth": ["4"],
        "MaxOutstandingReqs": ["4"],
        "NarrowDataWidth": ["32"],
        "RegisterNarrowOutputs": ["1"],
        "RegisterWideOutputs": ["1"],
        "WideDataWidth": ["64"],
        "WriteFifoDepth": ["2"],
    },
    deps = [":br_amba_axi_shrinker"],
)

br_verilog_synth_suite(
    name = "br_amba_axi_shrinker_scaled_ppa",
    params = {
        "AddrWidth": ["40"],
        "IdWidth": ["8"],
        "MaxOutstandingReqs": ["16"],
        "NarrowDataWidth": ["32"],
        "RegisterNarrowOutputs": ["1"],
        "RegisterWideOutputs": ["1"],
        "WideDataWidth": ["128"],
        "WriteFifoDepth": ["4"],
    },
    deps = [":br_amba_axi_shrinker"],
)

br_verilog_synth_suite(
    name = "br_amba_axi_timing_slice_forward_ppa",
    params = {
        "ARSliceType": ["0"],
        "AWSliceType": ["0"],
        "AddrWidth": ["32"],
        "BSliceType": ["0"],
        "DataWidth": ["32"],
        "IdWidth": ["4"],
        "RSliceType": ["0"],
        "WSliceType": ["0"],
    },
    deps = [":br_amba_axi_timing_slice"],
)

br_verilog_synth_suite(
    name = "br_amba_axi_timing_slice_full_ppa",
    params = {
        "ARSliceType": ["2"],
        "AWSliceType": ["2"],
        "AddrWidth": ["40"],
        "BSliceType": ["2"],
        "DataWidth": ["64"],
        "IdWidth": ["8"],
        "RSliceType": ["2"],
        "WSliceType": ["2"],
    },
    deps = [":br_amba_axi_timing_slice"],
)

br_verilog_synth_suite(
    name = "br_amba_axil2apb_baseline_ppa",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["32"],
    },
    deps = [":br_amba_axil2apb"],
)

br_verilog_synth_suite(
    name = "br_amba_axil2apb_scaled_ppa",
    params = {
        "AddrWidth": ["40"],
        "DataWidth": ["64"],
    },
    deps = [":br_amba_axil2apb"],
)

br_verilog_synth_suite(
    name = "br_amba_axil_default_target_width_ppa",
    params = {
        "DataWidth": [
            "32",
            "64",
        ],
    },
    deps = [":br_amba_axil_default_target"],
)

br_verilog_synth_suite(
    name = "br_amba_axil_msi_baseline_ppa",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["32"],
        "DeviceIdWidth": ["16"],
        "EventIdWidth": ["16"],
        "NumInterrupts": ["4"],
        "NumMsiDestAddr": ["1"],
        "ThrottleCntrWidth": ["4"],
    },
    deps = [":br_amba_axil_msi"],
)

br_verilog_synth_suite(
    name = "br_amba_axil_msi_scaled_ppa",
    params = {
        "AddrWidth": ["40"],
        "DataWidth": ["64"],
        "DeviceIdWidth": ["16"],
        "EventIdWidth": ["16"],
        "NumInterrupts": ["16"],
        "NumMsiDestAddr": ["4"],
        "ThrottleCntrWidth": ["16"],
    },
    deps = [":br_amba_axil_msi"],
)

br_verilog_synth_suite(
    name = "br_amba_axil_split_baseline_ppa",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["32"],
        "MaxOutstandingReads": ["4"],
        "MaxOutstandingWrites": ["4"],
        "NormalizeBranchAddress": ["0"],
        "NumBranchAddrRanges": ["1"],
    },
    deps = [":br_amba_axil_split"],
)

br_verilog_synth_suite(
    name = "br_amba_axil_split_scaled_ppa",
    params = {
        "AddrWidth": ["40"],
        "DataWidth": ["64"],
        "MaxOutstandingReads": ["16"],
        "MaxOutstandingWrites": ["16"],
        "NormalizeBranchAddress": ["1"],
        "NumBranchAddrRanges": ["4"],
    },
    deps = [":br_amba_axil_split"],
)

br_verilog_synth_suite(
    name = "br_amba_axil_timing_slice_baseline_ppa",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["32"],
    },
    deps = [":br_amba_axil_timing_slice"],
)

br_verilog_synth_suite(
    name = "br_amba_axil_timing_slice_scaled_ppa",
    params = {
        "AddrWidth": ["40"],
        "DataWidth": ["64"],
    },
    deps = [":br_amba_axil_timing_slice"],
)
