# SPDX-License-Identifier: Apache-2.0

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_sim_test_tools_suite")
load("//bazel:verilog.bzl", "verilog_elab_test")

verilog_library(
    name = "br_amba_apb_timing_slice_tb",
    srcs = ["br_amba_apb_timing_slice_tb.sv"],
    deps = [
        "//amba/rtl:br_amba_apb_timing_slice",
        "//amba/sim/drivers:br_amba_apb_sim_helpers",
        "//amba/sim/monitors:br_amba_apb_timing_slice_monitor",
        "//misc/sim:br_test_driver",
    ],
)

verilog_elab_test(
    name = "br_amba_apb_timing_slice_tb_elab_test",
    tool = "slang",
    deps = [":br_amba_apb_timing_slice_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_amba_apb_timing_slice_sim_test_tools_suite",
    params = {
        "AddrWidth": [
            "12",
            "32",
        ],
    },
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_amba_apb_timing_slice_tb"],
)

verilog_library(
    name = "br_amba_axi_timing_slice_tb",
    srcs = ["br_amba_axi_timing_slice_tb.sv"],
    deps = [
        "//amba/rtl:br_amba_axi_timing_slice",
        "//amba/sim/drivers:br_amba_axi_sim_pkg",
        "//amba/sim/drivers:br_amba_axi_timing_slice_driver",
        "//amba/sim/monitors:br_amba_axi_timing_slice_monitor",
        "//misc/sim:br_test_driver",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_timing_slice_tb_elab_test",
    tool = "slang",
    deps = [":br_amba_axi_timing_slice_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_amba_axi_timing_slice_sim_test_tools_suite",
    params = {
        "AddrWidth": [
            "12",
            "32",
        ],
        "DataWidth": [
            "32",
            "64",
        ],
        "NumTransactions": [
            "1",
        ],
        "SliceType": [
            "0",
            "1",
            "2",
        ],
    },
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_amba_axi_timing_slice_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_amba_axi_timing_slice_multi_sim_test_tools_suite",
    params = {
        "AddrWidth": [
            "12",
            "32",
        ],
        "DataWidth": [
            "32",
            "64",
        ],
        "NumTransactions": [
            "10",
        ],
        "SliceType": [
            "0",
            "2",
        ],
    },
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_amba_axi_timing_slice_tb"],
)

verilog_library(
    name = "br_amba_axi_default_target_tb",
    srcs = ["br_amba_axi_default_target_tb.sv"],
    deps = [
        "//amba/rtl:br_amba_axi_default_target",
        "//amba/sim/drivers:br_amba_axi_sim_pkg",
        "//amba/sim/drivers:br_amba_axi_target_driver",
        "//amba/sim/monitors:br_amba_axi_default_target_monitor",
        "//misc/sim:br_test_driver",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_default_target_tb_elab_test",
    tool = "slang",
    deps = [":br_amba_axi_default_target_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_amba_axi_default_target_sim_test_tools_suite",
    params = {
        "DataWidth": [
            "32",
            "64",
        ],
        "NumTransactions": [
            "1",
            "10",
        ],
        "ResponseKind": [
            "0",
            "1",
            "2",
        ],
        "SingleBeat": [
            "0",
            "1",
        ],
    },
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_amba_axi_default_target_tb"],
)

verilog_library(
    name = "br_amba_axi2axil_tb",
    srcs = ["br_amba_axi2axil_tb.sv"],
    deps = [
        "//amba/rtl:br_amba_axi2axil",
        "//amba/sim/drivers:br_amba_axi_sim_pkg",
        "//amba/sim/drivers:br_amba_axi_target_driver",
        "//amba/sim/drivers:br_amba_axil_sim_pkg",
        "//amba/sim/drivers:br_amba_axil_target_driver",
        "//amba/sim/drivers:br_amba_sim_pkg",
        "//amba/sim/monitors:br_amba_axi_response_monitor",
        "//amba/sim/monitors:br_amba_axil_request_monitor",
        "//misc/sim:br_test_driver",
    ],
)

verilog_elab_test(
    name = "br_amba_axi2axil_tb_elab_test",
    defines = [
        "BR_AMBA_AXI_SIM_ADDR_WIDTH=12",
        "BR_AMBA_AXI_SIM_DATA_WIDTH=32",
        "BR_AMBA_AXI_SIM_ID_WIDTH=3",
        "BR_AMBA_AXI_SIM_USER_WIDTH=2",
    ],
    tool = "slang",
    deps = [":br_amba_axi2axil_tb"],
)

[
    br_verilog_sim_test_tools_suite(
        name = "br_amba_axi2axil_sim_test_tools_suite_dw%s" % data_width,
        defines = [
            "BR_ASSERT_ON",
            "BR_ENABLE_IMPL_CHECKS",
            "SIMULATION",
            "BR_AMBA_AXI_SIM_ADDR_WIDTH=12",
            "BR_AMBA_AXI_SIM_DATA_WIDTH=%s" % data_width,
            "BR_AMBA_AXI_SIM_ID_WIDTH=3",
            "BR_AMBA_AXI_SIM_USER_WIDTH=2",
        ],
        params = {
            "MaxOutstandingReqs": [
                "4",
                "6",
            ],
            "NumRandomTransactions": [
                "1",
                "10",
            ],
        },
        tools = [
            "vcs",
            "verilator",
        ],
        deps = [":br_amba_axi2axil_tb"],
    )
    for data_width in [
        "32",
        "64",
    ]
]

verilog_library(
    name = "br_amba_axil_timing_slice_tb",
    srcs = ["br_amba_axil_timing_slice_tb.sv"],
    deps = [
        "//amba/rtl:br_amba_axil_timing_slice",
        "//amba/sim/drivers:br_amba_axil_sim_pkg",
        "//amba/sim/drivers:br_amba_axil_timing_slice_driver",
        "//amba/sim/monitors:br_amba_axil_timing_slice_monitor",
        "//misc/sim:br_test_driver",
    ],
)

verilog_elab_test(
    name = "br_amba_axil_timing_slice_tb_elab_test",
    tool = "slang",
    deps = [":br_amba_axil_timing_slice_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_amba_axil_timing_slice_sim_test_tools_suite",
    params = {
        "AddrWidth": [
            "12",
            "32",
        ],
        "DataWidth": [
            "32",
            "64",
        ],
        "NumTransactions": [
            "1",
            "10",
        ],
    },
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_amba_axil_timing_slice_tb"],
)

verilog_library(
    name = "br_amba_axi_isolate_sub_tb",
    srcs = ["br_amba_axi_isolate_sub_tb.sv"],
    deps = [
        "//amba/rtl:br_amba_axi_isolate_sub",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_isolate_sub_tb_elab_test",
    tool = "slang",
    deps = [":br_amba_axi_isolate_sub_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_amba_axi_isolate_sub_tb_sim_test_tools_suite",
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_amba_axi_isolate_sub_tb"],
)

verilog_library(
    name = "br_amba_axi_isolate_mgr_tb",
    srcs = ["br_amba_axi_isolate_mgr_tb.sv"],
    deps = [
        "//amba/rtl:br_amba_axi_isolate_mgr",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_isolate_mgr_tb_elab_test",
    tool = "slang",
    deps = [":br_amba_axi_isolate_mgr_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_amba_axi_isolate_mgr_tb_sim_test_tools_suite",
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_amba_axi_isolate_mgr_tb"],
)

verilog_library(
    name = "br_amba_axi_demux_tb",
    srcs = ["br_amba_axi_demux_tb.sv"],
    deps = [
        "//amba/rtl:br_amba_axi_demux",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_demux_tb_elab_test",
    tool = "slang",
    deps = [":br_amba_axi_demux_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_amba_axi_demux_tb_sim_test_tools_suite",
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_amba_axi_demux_tb"],
)

verilog_library(
    name = "br_amba_axi_shrinker_tb",
    srcs = ["br_amba_axi_shrinker_tb.sv"],
    deps = [
        "//amba/rtl:br_amba_axi_shrinker",
        "//misc/sim:br_test_driver",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_shrinker_tb_elab_test",
    tool = "slang",
    deps = [":br_amba_axi_shrinker_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_amba_axi_shrinker_sim_test_tools_suite",
    # TODO(mgottscho): Enable Verilator once it no longer emits generated C++
    # references to undeclared fork sync objects such as `__Vfork_25__sync`.
    tools = [
        "vcs",
        #"verilator",
    ],
    deps = [":br_amba_axi_shrinker_tb"],
)

verilog_library(
    name = "br_amba_axil_default_target_tb",
    srcs = ["br_amba_axil_default_target_tb.sv"],
    deps = [
        "//amba/rtl:br_amba_axil_default_target",
        "//amba/sim/drivers:br_amba_axil_driver",
        "//amba/sim/monitors:br_amba_axil_monitor",
        "//misc/sim:br_test_driver",
    ],
)

verilog_elab_test(
    name = "br_amba_axil_default_target_tb_elab_test",
    tool = "slang",
    deps = [":br_amba_axil_default_target_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_amba_axil_default_target_sim_test_tools_suite",
    params = {
        "DataWidth": [
            "32",
            "64",
        ],
        "NumTransactions": [
            "1",
            "10",
            "100",
        ],
        "ResponseKind": [
            "0",
            "1",
            "2",
        ],
    },
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_amba_axil_default_target_tb"],
)
